--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 				<h2 class="major">Get in touch</h2>
 				<p>Angular Community adheres broadly to principles of inclusivity, and collaboration.</p>
 				<ul class="contact">
-					<li class="fa-envelope"><a href="mailto:info@angularcommunity.org">info@angularcommunity.org</a></li>
+					<li class="fa-website"><a href="https://ngcommunity.online">ngcommunity.online</a></li>
 					<li class="fa-twitter"><a href="https://twitter.com/ngCommunity">twitter.com/ngCommunity</a></li>
 					<li class="fa-github"><a href="https://github.com/AngularCommunity">github.com/AngularCommunity</a></li>
 				</ul>
@@ -104,6 +104,16 @@
 
 	</div>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-BKFKJRX93V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-BKFKJRX93V');
+</script>
+	
 </body>
 
 </html>
